# odoo-mcp

./: .gitignore  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  DEPLOY.md  TOOLS.md
src/odoo_mcp/: __init__.py  app.py  audit.py  client.py  instances.py  server.py  validators.py
src/odoo_mcp/tools/: read.py  write_critical.py  write_safe.py
tests/: conftest.py  test_audit.py  test_validators.py  test_write_critical.py  test_write_safe.py
